--- a/afs/templates/views/components/workflows/project-report-workflow/download-project-files.htm
+++ b/afs/templates/views/components/workflows/project-report-workflow/download-project-files.htm
@@ -9,22 +9,19 @@
         <a class="expand-select-button" data-bind="click: function() { selectAll(true); }"><i class="ion-checkmark"></i>{% trans ' Select All' %}</a>
         <a class="expand-select-button" data-bind="click: function() { selectAll(false); }"><i class="ion-close"></i>{%  trans ' Clear All' %}</a>
     </div>
-    <!-- ko foreach: { data: relatedPhysicalThings, as: "thing" } -->
-    <div class="file-list-container">
-        <div class="physical-thing-list" data-bind="click: function() { thing.expanded(!thing.expanded()); }">
+    <!-- ko foreach: { data: relatedObservations, as: "observation" } -->
+    <div class="file-list-container" data-bind="if: observation.relatedFiles.length > 0">
+        <div class="physical-thing-list" data-bind="click: function() { observation.expanded(!observation.expanded()); }">
             <span>
-                <i class="fa" data-bind="css: {'fa-caret-right': !thing.expanded(), 'fa-caret-down': thing.expanded()}"></i>
+                <i class="fa" data-bind="css: {'fa-caret-right': !observation.expanded(), 'fa-caret-down': observation.expanded()}"></i>
             </span>
-            <span data-bind="text: thing.name"></span>
-            <!-- ko ifnot: thing.expanded() -->
-            <span data-bind="html: `\xa0- <strong>${thing.relatedFiles.length}</strong> file(s)`"></span>
+            <span data-bind="text: observation.name"></span>
+            <!-- ko ifnot: observation.expanded() -->
+            <span data-bind="html: `\xa0- <strong>${observation.relatedFiles.length}</strong> file(s)`"></span>
             <!-- /ko -->
         </div>
-        <!-- ko if: thing.expanded() && thing.relatedFiles.length == 0 -->
-        <div class="file-listing-text" data-bind="text: $root.translations.noRelatedFiles"></div>
-        <!-- /ko -->
-        <!-- ko if: thing.expanded() && thing.relatedFiles.length > 0 -->
-        <!-- ko foreach: { data: thing.relatedFiles, as: "file" } -->
+        <!-- ko if: observation.expanded() -->
+        <!-- ko foreach: { data: observation.relatedFiles, as: "file" } -->
         <div class="file-download-list">
             <input type="checkbox" data-bind="checked: file.selected">
             <a data-bind="attr: { href: file.url }, html: file.name + ' ' + self.formatSize(file.size)" target="_blank"></a>
@@ -35,7 +32,7 @@
     <!-- /ko -->
     <div class="file-download-button">
         <button class="btn btn-danger" data-bind="click: downloadFiles, css: {disabled: !ready() }">
-            <span data-bind="text: $root.translations.download"></span>
+            <span data-bind="text: $root.translations.downloadSelected"></span>
         </button>
         <span>
             <h4 data-bind="text: message"></h4>
