Display report template options #1163

--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -1038,3 +1038,20 @@
 .annotation-table .row{
     margin: 0;
 }
+
+.template-option-container {
+    margin: 10px 25px;
+}
+
+.template-option-label {
+    font-size: 1.25em;
+    font-weight: 500;
+    /* color: darkblue; */
+}
+
+.template-option-description {
+    font-size: 1em;
+    color: #777;
+    max-width: 350px;
+}
+
