--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -1039,14 +1039,25 @@
     margin: 0;
 }
 
+.template-format-heading {
+    padding-left: 25px;
+    font-weight: 500;
+    font-size: 1.75em;
+}
+
 .template-option-container {
     margin: 10px 25px;
+}
+
+.template-option-container > img {
+    max-width: 400px;
+    max-height: 400px;
 }
 
 .template-option-label {
     font-size: 1.25em;
     font-weight: 500;
-    /* color: darkblue; */
+    color: #004577;
 }
 
 .template-option-description {
