Change verbage on final step of chemical analysis workflow, re Error in final step of Chemical Analysis Data Upload step #1156

--- a/afs/templates/views/components/workflows/chemical-analysis-workflow/ca-final-step.htm
+++ b/afs/templates/views/components/workflows/chemical-analysis-workflow/ca-final-step.htm
@@ -64,7 +64,7 @@
         </div>
     </div>
     <div class="afs-final-step-section">
-        <h5 class="summary-value" style="margin-bottom: -10px;">{% trans 'Files for Upload' %}</h5>
+        <h5 class="summary-value" style="margin-bottom: -10px;">{% trans 'Uploaded Files' %}</h5>
         <!-- ko foreach: {data: fileLists, as: 'fileList'} -->
         <!-- ko if: fileList().length > 0 -->
         <h5 class="summary-value upload-dataset-name" data-bind="text: digitalResourceName || 'Unnamed Dataset (nothing to upload)'"></h5>
