Show template preview in a modal #1163

--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -1049,7 +1049,8 @@
     margin: 10px 25px;
 }
 
-.template-option-container > img {
+.template-option-container > img,
+.template-option-container > div > img {
     max-width: 400px;
     max-height: 400px;
 }
