--- a/afs/templates/views/components/workflows/project-report-workflow/report-template-select.htm
+++ b/afs/templates/views/components/workflows/project-report-workflow/report-template-select.htm
@@ -1,9 +1,52 @@
+<!-- Preview Viewer -->
+<div id="pdf-preview-modal" class="modal fade" tabindex="-1" role="dialog">
+    <div class="modal-dialog modal-dialog-centered" role="document" style="width: 100%;">
+        <div class="modal-content">
+            <div class="modal-header" style="justify-content: end; padding-bottom: 0;">
+                <button class="btn btn-sm btn-danger btn-labeled fa fa-times" 
+                    data-bind="click: function(){ showPDFPreview(null); }"
+                ><span>Close Preview</span></button>
+            </div>
+            <div class="modal-body">
+                <div data-bind="component: {
+                    name: 'pdfreader',
+                    params: {
+                        displayContent: {
+                            url: '/files/' + preview(),
+                            type: 'application/pdf'
+                        },
+                        context: 'render',
+                        selected: previewSelected,
+                    }
+                }"></div>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div data-bind="foreach: { data: allTemplateFormats, as: 'templateFormatGroup', noChildContext: true }">
     <div class="template-format-heading" data-bind="text: templateFormatGroup.heading"></div>
     <div class="columns option-input" data-bind="foreach: templateFormatGroup.templates" role="radiogroup">
         <div class="template-option-container">
-            <!-- ko if: thumbnail -->
-            <img class="img-responsive" alt="Image" data-bind="attr: {src: thumbnail}">
+            <!-- ko if: preview -->
+                <div data-bind="click: function() {
+                    $parent.showPDFPreview(preview);
+                }">
+                    <!-- ko if: thumbnail -->
+                    <img class="img-responsive" alt="Image" data-bind="attr: {src: '/files/' + thumbnail}">
+                    <!-- /ko -->
+                    <!-- ko ifnot: thumbnail -->
+                    <div><i data-bind="attr: {class: templateFormatGroup.icon}" style="font-size: 20em;"></i></div>
+                    <!-- /ko -->
+                </div>
+            <!-- /ko -->
+            <!-- ko ifnot: preview -->
+                <!-- ko if: thumbnail -->
+                <img class="img-responsive" alt="Image" data-bind="attr: {src: '/files/' + thumbnail}">
+                <!-- /ko -->
+                <!-- ko ifnot: thumbnail -->
+                <div><i data-bind="attr: {class: templateFormatGroup.icon}" style="font-size: 20em;"></i></div>
+                <!-- /ko -->
             <!-- /ko -->
 
             <label class="form-radio form-normal form-text" role="radio" tabindex="0"
