--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -1091,10 +1091,15 @@
     padding-left: 10px;
 }
 
+.download-report-container {
+    padding: 20px;
+}
+
 .template-format-heading {
     padding-left: 25px;
-    font-weight: 500;
-    font-size: 1.75em;
+    font-weight: bold;
+    font-size: 1.5em;
+    color: #2b547c;
 }
 
 .template-option-container {
