--- a/afs/templates/javascript.htm
+++ b/afs/templates/javascript.htm
@@ -26,6 +26,7 @@
     no-related-files='{% trans "No Related Files" as noRelatedFiles %}  "{{ noRelatedFiles|escapejs }}"'
     interpretation='{% trans "Interpretation" as interpretation %}  "{{ interpretation|escapejs }}"'
     parameters='{% trans "Parameters" as parameters %}  "{{ parameters|escapejs }}"'
+    report-download='{% trans " Report Download" as reportDownloads %}  "{{ reportDownloads|escapejs }}"'
 ></div>
 {% endblock arches_translations %}
 
