--- a/arches_for_science/templates/views/components/workflows/select-observation-step.htm
+++ b/arches_for_science/templates/views/components/workflows/select-observation-step.htm
@@ -1,7 +1,7 @@
 {% load i18n %}
 <div style="height: 100%; padding: 10px 24px;">
     <div style="padding: 5px">
-        <div class="widget-input-label">Project observation file</div>
+        <div class="widget-input-label">Project</div>
         <div data-bind="component: {
             name: 'resource-instance-select-widget',
             params: {
@@ -32,7 +32,7 @@
             params: {
                 termFilter: termFilter(),
                 renderContext: 'workflow', 
-                value: physicalThingValue,
+                value: observationValue,
                 disabled: locked,
             }
         }"></div>
