Add chemical analysis workflow, re #1134

--- a/afs/templates/javascript.htm
+++ b/afs/templates/javascript.htm
@@ -13,6 +13,7 @@
     upload_dataset_select_dataset_files_step = "{% url 'upload_dataset_select_dataset_files_step' %}"
     upload_dataset_file_renderer = '(tileid)=>{return "{% url "upload_dataset_file_renderer" "aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa" %}".replace("aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa", tileid)}',
     format_render_map = '(format)=>{return "{% url "format_render_map" "aaaaaaaa" %}".replace("aaaaaaaa", format)}'
+    add_chemical_analysis_images_file_upload = "{% url 'add_chemical_analysis_images_file_upload' %}"
 ></div>
 {% endblock arches_urls %}
 
