--- a/afs/templates/views/components/workflows/add-chemical-analysis-images-workflow/add-chemical-analysis-images-image-step.htm
+++ b/afs/templates/views/components/workflows/add-chemical-analysis-images-workflow/add-chemical-analysis-images-image-step.htm
@@ -55,6 +55,7 @@
                 summary: true,
                 shouldShowEditService: $data.shouldShowEditService,
                 manifestData: manifestData,
+                manifestManagerFormData: manifestManagerFormData,
                 renderContext: 'manifest-workflow',
                 transactionId: workflowId
             }
