--- a/afs/templates/views/components/workflows/add-chemical-analysis-images-workflow/add-chemical-analysis-images-final-step.htm
+++ b/afs/templates/views/components/workflows/add-chemical-analysis-images-workflow/add-chemical-analysis-images-final-step.htm
@@ -2,7 +2,7 @@
 <!-- ko if: loading() === false -->
 <div class="final-step">
     <div class="afs-final-step-section">
-        <h5 class="summary-value">{% trans 'Related Project/Object' %}</h5>
+        <h5 class="summary-value">{% trans 'Related Project/Observation' %}</h5>
         <div class="afs-final-step-block">
             <div style="display: flex; flex-direction: column;">
                 <div style="display: inline-flex;">
@@ -14,10 +14,10 @@
                     </a>
                 </div>
                 <div style="display: inline-flex;">
-                    <div class="summary-label" data-bind="text: reportVals.parentObject.name + ':'"></div>
-                    <a data-bind="attr: { href: urls.resource + '/' + resourceid}" target="_blank">
+                    <div class="summary-label" data-bind="text: reportVals.observationName.name + ':'"></div>
+                    <a data-bind="attr: { href: urls.resource + '/' + reportVals.observationName.resourceid}" target="_blank">
                         <div class="summary-value" 
-                            data-bind = "text: displayName">
+                            data-bind = "text: reportVals.observationName.value">
                         </div>
                     </a>
                 </div>
@@ -25,37 +25,34 @@
         </div>
     </div>
 
-    <div class="afs-final-step-section" style="display: none;">
-        <h5 class="summary-value">{% trans 'Regions' %}</h5>
-        <!-- ko foreach: regionInstances -->
+    <div class="afs-final-step-section">
+        <h5 class="summary-value">{% trans 'Related Manifest' %}</h5>
         <div class="afs-final-step-block">
-            <div style="display: flex; flex-direction: column;">
-                <a data-bind="attr: { href: $root.urls.resource + '/' + regionResource}" target="_blank">
+            <div style="display: inline-flex;">
+                <a data-bind="attr: { href: urls.resource + '/' + workflowManifestResource().resourceinstanceid}" target="_blank">
                     <div class="summary-value" 
-                        data-bind = "text: regionName">
+                        data-bind = "text: workflowManifestResource().displayname">
                     </div>
                 </a>
             </div>
         </div>
-        <!-- /ko -->
     </div>
 
     <div class="afs-final-step-section">
-        <h5 class="summary-value">{% trans 'Region(s) of Interest' %}</h5>
+        <h5 class="summary-value">{% trans 'Related Digital Files' %}</h5>
         <div class="afs-final-step-block">
             <div style="display: flex; flex-direction: column;">
+               <!-- ko foreach: {data: workflowDigitalResources, as: 'digitalResource'} -->
                 <div style="display: inline-flex;">
-                    <div class="summary-label" data-bind="text: reportVals.digitalReference.name + ':'"></div>
-                    <div class="summary-value" data-bind="text: reportVals.digitalReference.value"></div>
+                    <a data-bind="attr: { href: $parent.urls.resource + '/' + digitalResource.resourceinstanceid}" target="_blank">
+                        <div class="summary-value" 
+                            data-bind = "text: digitalResource.displayname">
+                        </div>
+                    </a>
                 </div>
+                <!-- /ko -->
             </div>
         </div>
-    </div>
-
-    <div class="afs-final-step-section">
-        <!-- ko foreach: {data: objectAnnotations, as: 'annotation'} -->
-        <div style="margin: -20px 0px 60px 0px;" data-bind="component: { name: 'views/components/annotation-summary', params: {annotation: annotation}}"></div>
-        <!-- /ko -->
     </div>
 </div>
 <!-- /ko -->
