fix another message

--- a/afs/templates/views/components/workflows/select-phys-thing-step.htm
+++ b/afs/templates/views/components/workflows/select-phys-thing-step.htm
@@ -49,7 +49,7 @@
             The selected object must have at least one related sample location or analysis area.
         </span>
         <span data-bind="if: datasetRoute == 'destructive'">
-            You have to select a sample. Please complete the sample taking workflow or start the workflow over and select the area dataset type.
+            The selected object must be a sample.
         </span>
     </div>
     <!-- /ko -->
