Update download button color to blue, #1199

--- a/afs/templates/views/components/workflows/project-report-workflow/download-project-files.htm
+++ b/afs/templates/views/components/workflows/project-report-workflow/download-project-files.htm
@@ -43,7 +43,7 @@
     </div>
     <!-- /ko -->
     <div class="file-download-button">
-        <button class="btn btn-danger" data-bind="click: downloadFiles, css: {disabled: !ready() }">
+        <button class="btn btn-primary" data-bind="click: downloadFiles, css: {disabled: !ready() }">
             <span data-bind="text: $root.translations.downloadSelected"></span>
         </button>
         <span>
