Fix alert styling and input labels #1259

--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -1158,3 +1158,11 @@
     transition: all linear .3s;
     z-index: 1;
 }
+
+.object-selector-label {
+    text-align: center;
+    margin: 16px 0px 16px 30px;
+    height:fit-content; 
+    background-color: #fde9ad;
+    overflow-y: auto;
+}
