--- a/afs/templates/views/components/workflows/select-phys-thing-step.htm
+++ b/afs/templates/views/components/workflows/select-phys-thing-step.htm
@@ -18,8 +18,11 @@
     <div style="padding: 5px; margin-top: 15px;">
         <div class="widget-input-label">
             <span data-bind="if not: datasetRoute">
-                Select an Object
+                Select an Object from your project
             </span>
+            <div data-bind="if not: datasetRoute" style="font-style: italic; margin-bottom: 10px;">
+                Object must have at least one analysis area or sample location
+            </div>
             <span data-bind="if: datasetRoute == 'non-destructive'">
                 Select an Object that has an Area of interest
             </span>
@@ -39,12 +42,12 @@
     </div>
     <!--/ko-->
     <!-- ko if: hasSetWithPhysicalThing() === false -->
-    <div class="tabbed-workflow-step-information-box widget-input-label" style="text-align: center; margin-top: 16px; height:fit-content; background-color: #fde9ad;">
+    <div class="object-selector-label tabbed-workflow-step-information-box widget-input-label">
         This project has no associated Objects. Your project must have an associated Object Collection with an Object before proceeding.
     </div>
     <!-- /ko -->
     <!-- ko if: validateThing && isPhysicalThingValid() === false -->
-    <div class="tabbed-workflow-step-information-box widget-input-label" style="text-align: center; margin-top: 16px; height:fit-content; background-color: #fde9ad;">
+    <div class="object-selector-label tabbed-workflow-step-information-box widget-input-label">
         <span data-bind="if: datasetRoute == 'non-destructive'">
             The selected object must have at least one related sample location or analysis area.
         </span>
