Disable screenshot if no annotation, #1223

--- a/afs/templates/views/components/workflows/project-report-workflow/add-annotations.htm
+++ b/afs/templates/views/components/workflows/project-report-workflow/add-annotations.htm
@@ -24,7 +24,7 @@
                 </div>
             </div>
         </div></div>
-        <button style="height:40px; margin: 0 10px;" class="btn btn-info" data-bind="click: screenshot">Add a Annotation Summary Image to Report</button>
+        <button style="height:40px; margin: 0 10px;" class="btn btn-info" data-bind="click: screenshot, css: {disabled: !leafletConfig() }">Add a Annotation Summary Image to Report</button>
         <div style="flex: 0.66;"></div>
     </div>
     <div>
