--- a/afs/templates/views/components/workflows/upload-dataset/instrument-info-step.htm
+++ b/afs/templates/views/components/workflows/upload-dataset/instrument-info-step.htm
@@ -10,6 +10,7 @@
                 ],
                 renderContext: 'workflow', 
                 value: instrumentValue,
+                allowInstanceCreation: true,
                 disabled: locked
             }
         }"></div>
