--- a/afs/templates/views/components/workflows/select-phys-thing-step.htm
+++ b/afs/templates/views/components/workflows/select-phys-thing-step.htm
@@ -17,18 +17,22 @@
     <!--ko if: termFilter() -->
     <div style="padding: 5px; margin-top: 15px;">
         <div class="widget-input-label">
-            <span data-bind="if not: datasetRoute">
-                Select an Object from your project
+            <!-- ko if: datasetRoute == 'non-destructive' -->
+            <span>
+                Select an Object from your Project
             </span>
-            <div data-bind="if not: datasetRoute" style="font-style: italic; margin-bottom: 10px;">
+            <div style="font-style: italic; margin-bottom: 10px;">
                 Object must have at least one analysis area or sample location
             </div>
-            <span data-bind="if: datasetRoute == 'non-destructive'">
-                Select an Object that has an Area of interest
-            </span>
-            <span data-bind="if: datasetRoute == 'destructive'">
+            <!-- /ko -->
+            <!-- ko if:  datasetRoute == 'destructive' -->
+            <span>
                 Select a Sample of interest
             </span>
+            <div style="font-style: italic; margin-bottom: 10px;">
+                Object must be a sample
+            </div>
+            <!-- /ko -->
         </div>
         <div data-bind="component: {
             name: 'resource-instance-select-widget',
